added css and edited site.html

--- a/site.html
+++ b/site.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <title>First git</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
 <body>
 
 <h1>My First Heading</h1>
