--- a/site.html
+++ b/site.html
@@ -6,9 +6,14 @@
 </head>
 <body>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
-
+<h1>My name is N0rule</h1>
+<p>Things i like:</p>
+<ul>
+    <li>Coffee</li>
+    <li>Tea</li>
+    <li>Milk</li>
+    <li>Raspberry</li>
+</ul>
 <script src="app.js"></script>
 </body>
 </html>
