--- a/site.html
+++ b/site.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="eng">
 <head>
     <title>First git</title>
     <link rel="stylesheet" href="styles.css">
@@ -7,7 +7,7 @@
 <body>
 
 <h1>My name is N0rule</h1>
-<p>Things i like:</p>
+<p>Things I like:</p>
 <ul>
     <li>Coffee</li>
     <li>Tea</li>
