--- a/index.html
+++ b/index.html
@@ -1,23 +1,65 @@
 <!DOCTYPE html>
-<html lang="eng">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>First git</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="./favicon.ico" type="image/x-icon">
+  <title>N0rule's Landing Page</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <script src="script.js"></script>
 </head>
 <body>
 
-<h1>My name is N0rule</h1>
-<p>Things I like:</p>
-<ul>
-    <li>Coffee</li>
-    <li>Tea</li>
-    <li>Milk</li>
-    <li>Raspberry</li>
-</ul>
-<script src="app.js"></script>
+  <main>
+    <div class="container">
+<div class="profile-picture-container">
+  <img src="https://i.imgur.com/R9ngEQT.png" alt="N0rule's profile picture" id="profile-picture">
+  <div class="hidden-text">N0rule</div>
+</div>
+      <section id="about-me">
+        <h2>About Me</h2>
+        <p>Hi, my name is <b>Vladimir "N0rule" Dvoruk</b> and I am a passionate IT Technologies and gaming enthusiast. I have been interested in these fields for many years and enjoy staying up to date with the latest developments and trends. In my free time, you can find me playing games, tinkering with new technologies, or participating in online communities and forums. Feel free to connect with me on my social media profiles to learn more about my interests and join in on the conversation!</p>
+      </section>
+    <section id="social-media">
+        <h2>Social Media</h2>
+        <div class="social-media-cards">
+          <div class="card">
+		  <a href="https://twitter.com/_N0rule_">
+            <img src="https://cdn-icons-png.flaticon.com/512/733/733579.png" alt="Twitter logo">
+            <h3>Twitter</h3>
+            @_n0rule_</a>
+          </div>
+          <div class="card">
+		  <a href="https://discord.gg/cfa3aFFtAX">
+            <img src="https://cdn-icons-png.flaticon.com/512/5968/5968756.png" alt="Discord logo">
+            <h3>Discord</h3>
+            n0rule#0319</a>
+          </div>
+          <div class="card">
+		  <a href="https://telegram.me/N0rule">
+            <img src="https://cdn-icons-png.flaticon.com/512/2111/2111646.png" alt="Telegram logo">
+            <h3>Telegram</h3>
+            @N0rule</a>		
+          </div>
+          <div class="card">
+		  <a href="https://www.instagram.com/n0rule_">
+            <img src="https://cdn-icons-png.flaticon.com/512/174/174855.png" alt="Instagram logo">
+            <h3>Instagram</h3>
+            @n0rule_</a>		
+          </div>
+		  <div class="card">
+		  <a href="https://github.com/N0rule">
+            <img src="https://cdn-icons-png.flaticon.com/512/2111/2111432.png" alt="Github logo">
+            <h3>Github</h3>
+            @N0rule</a>		
+          </div>
+          <div class="card">
+		  <a href="https://steamcommunity.com/id/N0rule">
+            <img src="https://cdn-icons-png.flaticon.com/512/3670/3670382.png" alt="Steam logo">
+            <h3>Steam</h3>
+            @N0rule</a>		
+          </div>
+          </div>
+        </div>
+      </section>
+    </div>
+  </main>
 </body>
 </html>
