About me section rewrite

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 </div>
       <section id="about-me">
         <h2>About Me</h2>
-        <p>Hi, my name is <b>Vladimir "N0rule" Dvoruk</b> and I am a passionate IT Technologies and gaming enthusiast. I have been interested in these fields for many years and enjoy staying up to date with the latest developments and trends. In my free time, you can find me playing games, tinkering with new technologies, or participating in online communities and forums. Feel free to connect with me on my social media profiles to learn more about my interests and join in on the conversation!</p>
+        <p>Hi, my name is <b>Vladmir "N0rule" Dvoruk</b> and I am a tech-savvy individual with a passion for all things IT and computer-related. I am constantly learning and staying up-to-date with the latest trends and developments in the industry, and I have a particular interest in 3D modeling using Blender and creating games in Unity,i am also a like to code and have experience with a variety of programming languages. I enjoy tackling complex problems and finding creative solutions through coding.. In my free time, I enjoy building and customizing my own PCs, as well as playing video games and watching anime.
+          <br><br>
+          When I'm not busy learning about new technologies or coding, you can find me playing video games or watching anime. I also enjoy participating in online communities,forums and open to connecting with others who share similar interests and discussing the latest tech trends. Feel free to reach out using social media and learn more about me in the conversation!</p>       
       </section>
     <section id="social-media">
         <h2>Social Media</h2>
