added light/dark theme switcher

--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
   <link rel="stylesheet" type="text/css" href="style.css">
   <script src="script.js"></script>
 </head>
-<body>
-
+<body class="dark">
   <main>
     <div class="container">
+      <div class="theme-button-container">
+        <button id="theme-button">
+          <img src="https://cdn-icons-png.flaticon.com/512/1312/1312348.png" alt="theme-button"/>
+        </button>
+        </div>
 <div class="profile-picture-container">
   <img src="https://i.imgur.com/R9ngEQT.png" alt="N0rule's profile picture" id="profile-picture">
   <div class="hidden-text">N0rule</div>
