restyled top button

--- a/index.html
+++ b/index.html
@@ -172,12 +172,12 @@
             </a>
           </div>
         </div>
-    </div>
-    </section>
-    </div>
+      </section>
     </div>
   </main>
-  <a href="#" class="top">Back to Top &#8593;</a>
+  <div class="container-top">
+    <a href="#" class="top"></a>
+  </div>
 </body>
 
 </html>
