--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
   <meta name="msapplication-TileColor" content="#FFFFFF">
   <meta name="msapplication-TileImage" content="images/favicons/favicon-144.png">
   <meta name="msapplication-config" content="images/favicons/browserconfig.xml">
+  <meta charset="UTF-8">
+  <meta name="description" content="N0rule's Personal Website">
+  <meta name="author" content="N0rule">
   <link rel="stylesheet" type="text/css" href="style.css">
   <script src="script.js"></script>
   <script type="module" src="3d.js"></script>
@@ -53,24 +56,21 @@
         <ul>
           <li><a href="#about-me">About Me</a></li>
           <li><a href="#projects">Projects</a></li>
+          <li><a href="#skills">Skills</a></li>
           <li><a href="#social-media">Social Media</a></li>
         </ul>
       </nav>
       <section id="about-me">
         <h2>About Me</h2>
-        <p>Hi, my name is <b>Vladimir "N0rule" Dvoruk</b> and I am a tech-savvy individual with a passion for all
-          things
-          IT and computer-related.I am constantlylearning and staying up-to-date with the latest trends and
-          developments
-          in the industry,and I have aparticular interest in 3D modeling using Blender and creating games in Unity,i
-          am
+        <p>Hi, my name is <b>Vladimir "N0rule" Dvoruk</b> and I am a tech-savvy individual with a passion for all  things
+          IT and computer-related. I am constantlylearning and staying up-to-date with the latest trends and developments
+          in the industry, and I have aparticular interest in 3D modeling using Blender and creating games in Unity, i am
           also a like to code and haveexperience with a variety of programming languages.I enjoy tackling complex
-          problems and finding creativesolutions through coding.In my free time, I enjoy building and customizing my
-          own
-          PCs, as well as playingvideo games and watchinganime.
+          problems and finding creativesolutions through coding.In my free time, I enjoy building and customizing my own
+          PCs, as well as playing video games and watching anime.
           <br><br>When I'm not busy learning about new technologies or coding,you can find me playing video games or
-          watchinganime.I also enjoy participating in online communities,forums and open to connecting with others who
-          sharesimilarinterests and discussing the latest tech trends.Feel free to reach out using social media and
+          watching anime. I also enjoy participating in online communities,forums and open to connecting with others who
+          sharesimilarinterests and discussing the latest tech trends. Feel free to reach out using social media and
           learnmore about me in the conversation!
         </p>
       </section>
@@ -82,7 +82,7 @@
             <div class="emi_bot_container">
               <img id="emi_bot" src="images/emi_bot.png" alt="Bot Img">
               <p>Meet Emi,ultimate discord companion! Emi is a versatile bot that offers a wide range of
-                functionalities, from administrative commands to fun and entertainment.Emi can easily manage
+                functionalities, from administrative commands to fun and entertainment. Emi can easily manage
                 server with commands like kick, ban, and mute. Emi also has a built-in music player that allows to play
                 your favorite songs and create custom playlists. Additionally, Emi has an economy system that
                 allows you to earn coins. Emi also offers Reaction, covid, pokemon commands.</p>
@@ -118,11 +118,64 @@
               to the gameplay.<br><br>
               Pistol, for example, is perfect for taking out zombies at close range, while the shotgun is ideal for
               clearing out large groups of enemies. The rifle has laser to help with aim, and can be used in both close
-              and
-              long-range combat, sniper rifle allows players to take out zombies from a safe distance. <br><br>
+              and long-range combat, sniper rifle allows players to take out zombies from a safe distance. <br><br>
               In addition to the weapons, players can also use various items, such as health packs and ammo, to aid in
               their survival.</p>
             <video src="video/game-video.mp4" autoplay loop muted playsinline>
+          </div>
+          <div class="projcard" id="hosting">
+            <h2>Cloud Hosting </h2>
+            <p>I have had the opportunity to work with Oracle Cloud to host a variety of projects. One of my most
+              successful endeavors has been the setup and maintenance of a Discord bot and Minecraft server.<br><br>
+              The process of setting up the Discord bot involved creating a virtual machine on Oracle Cloud, installing
+              the necessary software and dependencies, and configuring the bot's settings to meet the specific needs of
+              my community. I also set up a MongoDB database to store user information and other data for the
+              bot.<br><br>
+              In addition to the bot, I have also set up a Minecraft Purpur server using Oracle Cloud. This involved
+              creating a
+              virtual machine, installing the necessary software and dependencies, and configuring the server settings
+              to match the needs of my community. I also implemented a variety of plugins to enhance the gameplay
+              experience for my players. This experience of hosting Minecraft server using Oracle Cloud was a great
+              learning opportunity for me, as it allowed me to understand the flexibility and scalability of the
+              platform.
+            </p>
+            <img src="images/cloud1.png" alt="Cloud img">
+            <img src="images/cloud2.png" alt="Cloud img">
+          </div>
+        </div>
+      </section>
+      <section id="skills">
+        <h2>Skills</h2>
+        <div class="skills-container">
+          <div class="skill">
+            <h3>Html/CSS</h3>
+            <div class="progress-bar-back">
+              <div class="progress-bar-front" style="width: 60%;"></div>
+            </div>
+          </div>
+          <div class="skill">
+            <h3>Unity</h3>
+            <div class="progress-bar-back">
+              <div class="progress-bar-front" style="width: 54%;"></div>
+            </div>
+          </div>
+          <div class="skill">
+            <h3>Blender</h3>
+            <div class="progress-bar-back">
+              <div class="progress-bar-front" style="width: 70%;"></div>
+            </div>
+          </div>
+          <div class="skill">
+            <h3>C++</h3>
+            <div class="progress-bar-back">
+              <div class="progress-bar-front" style="width: 30%;"></div>
+            </div>
+          </div>
+          <div class="skill">
+            <h3>Oracle Cloud</h3>
+            <div class="progress-bar-back">
+              <div class="progress-bar-front" style="width: 50%;"></div>
+            </div>
           </div>
         </div>
       </section>
