--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </script>
 
 <head>
-  <title>N0rule's Landing Page</title>
+  <title>N0rule weebpage🫠</title>
   <link rel="shortcut icon" href="images/favicons/favicon.ico">
   <link rel="icon" sizes="16x16 32x32 64x64" href="images/favicons/favicon.ico">
   <link rel="icon" type="image/png" sizes="196x196" href="images/favicons/favicon-192.png">
