added google analytics

--- a/index.html
+++ b/index.html
@@ -42,6 +42,19 @@
   <script type="module" src="3d.js"></script>
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-9B4NME457B"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-9B4NME457B');
+</script>
+
+
+
+
 <body class="dark">
   <main>
     <div class="container">
