Добавлена кнопка,рефактор текста

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-9B4NME457B"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
+  function gtag() { dataLayer.push(arguments); }
   gtag('js', new Date());
 
   gtag('config', 'G-9B4NME457B');
@@ -73,16 +73,15 @@
       </nav>
       <section id="about-me">
         <h2>About Me</h2>
-        <p>Hi, my name is <b>Vladimir "N0rule" Dvoruk</b> and I am a tech-savvy individual with a passion for all  things
-          IT and computer-related. I am constantlylearning and staying up-to-date with the latest trends and developments
-          in the industry, and I have aparticular interest in 3D modeling using Blender and creating games in Unity, i am
-          also a like to code and haveexperience with a variety of programming languages.I enjoy tackling complex
-          problems and finding creativesolutions through coding.In my free time, I enjoy building and customizing my own
-          PCs, as well as playing video games and watching anime.
-          <br><br>When I'm not busy learning about new technologies or coding,you can find me playing video games or
-          watching anime. I also enjoy participating in online communities,forums and open to connecting with others who
-          sharesimilarinterests and discussing the latest tech trends. Feel free to reach out using social media and
-          learnmore about me in the conversation!
+        <p>My name is Vladimir "N0rule" Dvoruk and I'm an IT enthusiast with a strong passion for technology and
+          computing. I keep up to date with the latest advancements and innovations in the field and have a specific
+          interest in 3D modeling using Blender and game development in Unity. I also enjoy coding and have experience
+          with multiple programming languages. I thrive on challenging problems and finding creative solutions through
+          programming.
+          <br><br>In my leisure time, I like to build and customize PCs and also spend time playing video games and
+          watching anime. I'm an active member of online communities and always open to connecting with others who share
+          similar interests. If you want to learn more about me, feel free to reach out and start a conversation through
+          social media!
         </p>
       </section>
       <section id="projects">
@@ -92,29 +91,32 @@
             <h2>Discord Bot</h2>
             <div class="emi_bot_container">
               <img id="emi_bot" src="images/emi_bot.png" alt="Bot Img">
-              <p>Meet Emi,ultimate discord companion! Emi is a versatile bot that offers a wide range of
-                functionalities, from administrative commands to fun and entertainment. Emi can easily manage
-                server with commands like kick, ban, and mute. Emi also has a built-in music player that allows to play
-                your favorite songs and create custom playlists. Additionally, Emi has an economy system that
-                allows you to earn coins. Emi also offers Reaction, covid, pokemon commands.</p>
+              <p>Meet Emi, the ultimate discord companion! Emi is a feature-rich bot that offers a wide range of
+                functionalities, including administrative commands, music player, economy system, and fun commands. Emi
+                can effortlessly manage your server with commands like kick, ban, and mute. You can also play your
+                favorite songs and create custom playlists with the built-in music player. Additionally, Emi has an
+                economy system that lets you earn coins, and offers commands like Reaction, Covid, and Pokemon.</p>
+              <div class="download-button">
+                <a href="https://github.com/N0rule/Syndicate-bot">
+                  <img src="https://cdn-icons-png.flaticon.com/512/2111/2111432.png" alt="Github logo">
+                  Github
+                </a>
+              </div>
             </div>
           </div>
           <div class="projcard">
             <h2>3D Models</h2>
-            <p>I have always been fascinated by the possibilities of virtual reality and the immersive
-              experiences it can provide. That's why I decided to dive into the world of VRChat, a popular social VR
-              platform where users can create and share their own content.<br><br>
-              One of my first projects in VRChat was creating a series of custom avatars for players to use. I wanted to
-              create a variety of different styles and themes, from fantasy characters to anime-inspired designs. I put
-              a lot of time and effort into the details of each model, making sure they were both unique and
-              high-quality. <br><br>
-              In addition to creating avatars for VRChat, I also enjoy creating 3D models for game development. I have
-              worked on several game projects in the past, creating characters, props, and environments for different
-              genres of games. I find it extremely rewarding to see my models come to life in a game and be enjoyed by
-              players.<br><br>
-              All of my 3D models are created using Blender. I am
-              constantly learning new techniques and experimenting with different materials and lighting to improve my
-              skills.
+            <p>I've always been fascinated by the potential of virtual reality and the immersive experiences it offers.
+              That's why I jumped into the world of VRChat, a popular social VR platform where users can create and
+              share their own content.
+              <br><br>One of my first projects in VRChat was creating a series of custom avatars for users to use. I
+              aimed to create a diverse range of styles and themes, from fantasy characters to anime-inspired designs. I
+              put a lot of effort into the details of each model, making sure they were both unique and of high quality.
+              <br><br>Apart from VRChat avatars, I also enjoy creating 3D models for game development. I have worked on
+              several game projects in the past, creating characters, props, and environments for various game genres.
+              It's incredibly rewarding to see my models come to life in a game and be enjoyed by players.
+              <br><br>All my 3D models are created using Blender. I continuously improve my skills by learning new
+              techniques and experimenting with materials and lighting.
             </p>
             <img src="images/render1.png" alt="3D Model">
             <img src="images/render2.png" alt="3D Model">
@@ -123,32 +125,35 @@
           </div>
           <div class="projcard">
             <h2>Games</h2>
-            <p>Introducing "Zombie Shooter", survival game created using Unity. In this game, players are
-              tasked with fighting off hordes of zombies using a variety of weapons, including a pistol, shotgun, rifle,
-              and sniper rifle. Each weapon has its own unique gimmick, adding an extra layer of strategy and excitement
-              to the gameplay.<br><br>
-              Pistol, for example, is perfect for taking out zombies at close range, while the shotgun is ideal for
-              clearing out large groups of enemies. The rifle has laser to help with aim, and can be used in both close
-              and long-range combat, sniper rifle allows players to take out zombies from a safe distance. <br><br>
-              In addition to the weapons, players can also use various items, such as health packs and ammo, to aid in
-              their survival.</p>
-            <video src="video/game-video.mp4" autoplay loop muted playsinline>
+            <p>Presenting "Zombie Shooter", a survival game developed using Unity. Players are challenged to fend off
+              waves of zombies with a selection of weapons, including a pistol, shotgun, rifle, and sniper rifle. Each
+              weapon possesses its own unique feature, adding a new dimension of strategy and thrill to the gameplay
+              experience.
+              <br><br>
+              For instance, the pistol is ideal for dispatching zombies at close range, while the shotgun excels at
+              taking out large groups of enemies. The rifle, equipped with a laser for improved accuracy, can be
+              utilized both in close and long-range battles. The sniper rifle, on the other hand, provides players with
+              a safe means of eliminating zombies from a distance.
+              <br><br>
+              In addition to weapons, players have access to a range of items, such as health packs and ammunition, to
+              enhance their chances of survival.
+            </p>
+            <div>
+              <video src="video/game-video.mp4" autoplay loop muted playsinline>
+            </div>
           </div>
           <div class="projcard" id="hosting">
-            <h2>Cloud Hosting </h2>
-            <p>I have had the opportunity to work with Oracle Cloud to host a variety of projects. One of my most
-              successful endeavors has been the setup and maintenance of a Discord bot and Minecraft server.<br><br>
-              The process of setting up the Discord bot involved creating a virtual machine on Oracle Cloud, installing
-              the necessary software and dependencies, and configuring the bot's settings to meet the specific needs of
-              my community. I also set up a MongoDB database to store user information and other data for the
-              bot.<br><br>
-              In addition to the bot, I have also set up a Minecraft Purpur server using Oracle Cloud. This involved
-              creating a
-              virtual machine, installing the necessary software and dependencies, and configuring the server settings
-              to match the needs of my community. I also implemented a variety of plugins to enhance the gameplay
-              experience for my players. This experience of hosting Minecraft server using Oracle Cloud was a great
-              learning opportunity for me, as it allowed me to understand the flexibility and scalability of the
-              platform.
+            <h2>Cloud Hosting Solutions</h2>
+            <p>I've had the privilege of utilizing Oracle Cloud for hosting various projects. One of my most notable
+              achievements has been the establishment and management of a Discord bot and a Minecraft server.<br><br>
+              To set up the Discord bot, I created a virtual machine on Oracle Cloud and installed the necessary
+              software and dependencies. I then configured the bot's settings to cater to the specific needs of my
+              community, and set up a MongoDB database to store user information and other data for the bot.<br><br>
+              I also established a Minecraft Purpur server using Oracle Cloud. This involved creating a virtual machine,
+              installing the necessary software and dependencies, and configuring the server settings to match the needs
+              of my community. Additionally, I installed various plugins to improve the gameplay experience for my
+              players. Hosting the Minecraft server on Oracle Cloud provided a valuable learning experience, as it
+              showcased the platform's flexibility and scalability.
             </p>
             <img src="images/cloud1.png" alt="Cloud img">
             <img src="images/cloud2.png" alt="Cloud img">
