adjustments to better fit my pref

--- a/index.html
+++ b/index.html
@@ -97,9 +97,15 @@
                 favorite songs and create custom playlists with the built-in music player. Additionally, Emi has an
                 economy system that lets you earn coins, and offers commands like Reaction, Covid, and Pokemon.</p>
               <div class="download-button">
-                <a href="https://github.com/N0rule/Syndicate-bot">
+                <a href="https://github.com/N0rule/emi-discord-bot">
                   <img src="https://cdn-icons-png.flaticon.com/512/2111/2111432.png" alt="Github logo">
                   Github
+                </a>
+              </div>
+              <div class="download-button">
+                <a href="https://discord.com/invite/KDCa8dczVW">
+                  <img src="https://cdn-icons-png.flaticon.com/512/5968/5968756.png" alt="Discord logo">
+                  Test Server
                 </a>
               </div>
             </div>
@@ -206,7 +212,7 @@
             </a>
           </div>
           <div class="mcard">
-            <a href="https://discord.gg/cfa3aFFtAX">
+            <a href="https://discord.com/invite/KDCa8dczVW">
               <img src="https://cdn-icons-png.flaticon.com/512/5968/5968756.png" alt="Discord logo">
               <h3>Discord</h3>
               n0rule#0319
