added new project

--- a/index.html
+++ b/index.html
@@ -111,6 +111,22 @@
             </div>
           </div>
           <div class="projcard">
+            <h2>TizenOS OSC heart rate monitor for VRChat</h2>
+            <div class="emi_bot_container">
+              <img id="emi_bot" src="images/tizen_os_OSC.png" alt="Tizen OS OSC Image">
+              <p>This  tool leverages the capabilities of your TizenOS Watch to seamlessly
+                transmit Open Sound Control (OSC) messages of your heart rate directly into the virtual realm of VRChat. By
+                integrating real-time physiological data into the virtual experience, users can enhance immersion, deepen
+                interactions, and explore new possibilities for emotional engagement within the virtual environment.</p>
+              <div class="download-button">
+                <a href="https://github.com/N0rule/vrc-osc-tizenos-hrm">
+                  <img src="https://cdn-icons-png.flaticon.com/512/2111/2111432.png" alt="Github logo">
+                  Github
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="projcard">
             <h2>3D Models</h2>
             <p>I've always been fascinated by the potential of virtual reality and the immersive experiences it offers.
               That's why I jumped into the world of VRChat, a popular social VR platform where users can create and
