Added new animation, some fixes

--- a/index.html
+++ b/index.html
@@ -114,9 +114,11 @@
             <h2>TizenOS OSC heart rate monitor for VRChat</h2>
             <div class="emi_bot_container">
               <img id="emi_bot" src="images/tizen_os_OSC.png" alt="Tizen OS OSC Image">
-              <p>This  tool leverages the capabilities of your TizenOS Watch to seamlessly
-                transmit Open Sound Control (OSC) messages of your heart rate directly into the virtual realm of VRChat. By
-                integrating real-time physiological data into the virtual experience, users can enhance immersion, deepen
+              <p>This tool leverages the capabilities of your TizenOS Watch to seamlessly
+                transmit Open Sound Control (OSC) messages of your heart rate directly into the virtual realm of VRChat.
+                By
+                integrating real-time physiological data into the virtual experience, users can enhance immersion,
+                deepen
                 interactions, and explore new possibilities for emotional engagement within the virtual environment.</p>
               <div class="download-button">
                 <a href="https://github.com/N0rule/vrc-osc-tizenos-hrm">
@@ -140,9 +142,12 @@
               <br><br>All my 3D models are created using Blender. I continuously improve my skills by learning new
               techniques and experimenting with materials and lighting.
             </p>
-            <img src="images/render1.png" alt="3D Model">
-            <img src="images/render2.png" alt="3D Model">
-            <img src="images/render3.png" alt="3D Model">
+            <img src="images/render1.png" alt="3D Model 1">
+            <img src="images/render2.png" alt="3D Model 2">
+            <img src="images/render3.png" alt="3D Model 3">
+            <div style="margin-top: 20px;">
+              <video src="video/Baphy_animation.mp4" autoplay loop muted playsinline alt="3D Model Animation">
+            </div>
             <!-- <canvas id="model-viewer"></canvas> В Процессе.. -->
           </div>
           <div class="projcard">
@@ -161,7 +166,7 @@
               enhance their chances of survival.
             </p>
             <div>
-              <video src="video/game-video.mp4" autoplay loop muted playsinline>
+              <video src="video/game-video.mp4" autoplay loop muted playsinline alt="Gane Video">
             </div>
           </div>
           <div class="projcard" id="hosting">
@@ -177,8 +182,8 @@
               players. Hosting the Minecraft server on Oracle Cloud provided a valuable learning experience, as it
               showcased the platform's flexibility and scalability.
             </p>
-            <img src="images/cloud1.png" alt="Cloud img">
-            <img src="images/cloud2.png" alt="Cloud img">
+            <img src="images/cloud1.png" alt="Cloud img 1">
+            <img src="images/cloud2.png" alt="Cloud img 2">
           </div>
         </div>
       </section>
