--- a/index.html
+++ b/index.html
@@ -1,45 +1,33 @@
 <!DOCTYPE html>
-<html>
 
-<script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
-
-<script type="importmap">
-  {
-    "imports": {
-      "three": "https://unpkg.com/three@0.148.0/build/three.module.js",
-      "three/addons/": "https://unpkg.com/three@0.148.0/examples/jsm/"
-    }
-  }
-</script>
-
+  <html lang="en">
 <head>
   <title>N0rule weebpage🫠</title>
-  <link rel="shortcut icon" href="images/favicons/favicon.ico">
-  <link rel="icon" sizes="16x16 32x32 64x64" href="images/favicons/favicon.ico">
-  <link rel="icon" type="image/png" sizes="196x196" href="images/favicons/favicon-192.png">
-  <link rel="icon" type="image/png" sizes="160x160" href="images/favicons/favicon-160.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="images/favicons/favicon-96.png">
-  <link rel="icon" type="image/png" sizes="64x64" href="images/favicons/favicon-64.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="images/favicons/favicon-32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="images/favicons/favicon-16.png">
-  <link rel="apple-touch-icon" href="images/favicons/favicon-57.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="images/favicons/favicon-114.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="images/favicons/favicon-72.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="images/favicons/favicon-144.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="images/favicons/favicon-60.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="images/favicons/favicon-120.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="images/favicons/favicon-76.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="images/favicons/favicon-152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="images/favicons/favicon-180.png">
+  <link rel="shortcut icon" href="/images/favicons/favicon.ico">
+  <link rel="icon" sizes="16x16 32x32 64x64" href="/images/favicons/favicon.ico">
+  <link rel="icon" type="image/png" sizes="196x196" href="/images/favicons/favicon-192.png">
+  <link rel="icon" type="image/png" sizes="160x160" href="/images/favicons/favicon-160.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="/images/favicons/favicon-96.png">
+  <link rel="icon" type="image/png" sizes="64x64" href="/images/favicons/favicon-64.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/images/favicons/favicon-32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/images/favicons/favicon-16.png">
+  <link rel="apple-touch-icon" href="/images/favicons/favicon-57.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="/images/favicons/favicon-114.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="/images/favicons/favicon-72.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="/images/favicons/favicon-144.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="/images/favicons/favicon-60.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="/images/favicons/favicon-120.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="/images/favicons/favicon-76.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="/images/favicons/favicon-152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/images/favicons/favicon-180.png">
   <meta name="msapplication-TileColor" content="#FFFFFF">
-  <meta name="msapplication-TileImage" content="images/favicons/favicon-144.png">
-  <meta name="msapplication-config" content="images/favicons/browserconfig.xml">
+  <meta name="msapplication-TileImage" content="/images/favicons/favicon-144.png">
+  <meta name="msapplication-config" content="/images/favicons/browserconfig.xml">
   <meta charset="UTF-8">
   <meta name="description" content="N0rule's Personal Website">
   <meta name="author" content="N0rule">
-  <link rel="stylesheet" type="text/css" href="style.css">
-  <script src="script.js"></script>
-  <script type="module" src="3d.js"></script>
+  <link rel="stylesheet" type="text/css" href="/style.css">
+  <script src="/script.js"></script>
 </head>
 
 <!-- Google tag (gtag.js) -->
@@ -52,7 +40,6 @@
   gtag('config', 'G-9B4NME457B');
 </script>
 
-
 <body class="dark">
   <main>
     <div class="container">
@@ -60,7 +47,7 @@
         <img src="https://cdn-icons-png.flaticon.com/512/1312/1312348.png" alt="theme-button" />
       </button>
       <div class="profile-picture-container">
-        <img src="images/profile-picture.png" alt="N0rule's profile picture" id="profile-picture">
+        <img src="/images/profile-picture.png" alt="N0rule's profile picture" id="profile-picture">
         <div class="pphidden-text">N0rule</div>
       </div>
       <nav>
@@ -90,7 +77,7 @@
           <div class="projcard">
             <h2>Discord Bot</h2>
             <div class="emi_bot_container">
-              <img id="emi_bot" src="images/emi_bot.png" alt="Bot Img">
+              <img id="emi_bot" src="/images/emi_bot.png" alt="Bot Img">
               <p>Meet Emi, the ultimate discord companion! Emi is a feature-rich bot that offers a wide range of
                 functionalities, including administrative commands, music player, economy system, and fun commands. Emi
                 can effortlessly manage your server with commands like kick, ban, and mute. You can also play your
@@ -113,7 +100,7 @@
           <div class="projcard">
             <h2>TizenOS OSC heart rate monitor for VRChat</h2>
             <div class="emi_bot_container">
-              <img id="emi_bot" src="images/tizen_os_OSC.png" alt="Tizen OS OSC Image">
+              <img id="emi_bot" src="/images/tizen_os_OSC.png" alt="Tizen OS OSC Image">
               <p>This tool leverages the capabilities of your TizenOS Watch to seamlessly
                 transmit Open Sound Control (OSC) messages of your heart rate directly into the virtual realm of VRChat.
                 By
@@ -142,11 +129,11 @@
               <br><br>All my 3D models are created using Blender. I continuously improve my skills by learning new
               techniques and experimenting with materials and lighting.
             </p>
-            <img src="images/render1.png" alt="3D Model 1">
-            <img src="images/render2.png" alt="3D Model 2">
-            <img src="images/render3.png" alt="3D Model 3">
+            <img src="/images/render1.png" alt="3D Model 1">
+            <img src="/images/render2.png" alt="3D Model 2">
+            <img src="/images/render3.png" alt="3D Model 3">
             <div style="margin-top: 20px;">
-              <video src="video/Baphy_animation.mp4" autoplay loop muted playsinline alt="3D Model Animation">
+              <video src="/video/Baphy_animation.mp4" autoplay loop muted playsinline alt="3D Model Animation">
             </div>
             <!-- <canvas id="model-viewer"></canvas> В Процессе.. -->
           </div>
@@ -166,7 +153,7 @@
               enhance their chances of survival.
             </p>
             <div>
-              <video src="video/game-video.mp4" autoplay loop muted playsinline alt="Gane Video">
+              <video src="/video/game-video.mp4" autoplay loop muted playsinline alt="Game Video">
             </div>
           </div>
           <div class="projcard" id="hosting">
@@ -182,46 +169,52 @@
               players. Hosting the Minecraft server on Oracle Cloud provided a valuable learning experience, as it
               showcased the platform's flexibility and scalability.
             </p>
-            <img src="images/cloud1.png" alt="Cloud img 1">
-            <img src="images/cloud2.png" alt="Cloud img 2">
+            <img src="/images/cloud1.png" alt="Cloud img 1">
+            <img src="/images/cloud2.png" alt="Cloud img 2">
           </div>
         </div>
       </section>
       <section id="skills">
         <h2>Skills</h2>
         <div class="skills-container">
-          <div class="skill">
-            <h3>Html/CSS</h3>
-            <div class="progress-bar-back">
-              <div class="progress-bar-front" style="width: 60%;"></div>
+            <div class="skill">
+                <h3>Unity</h3>
+                <div class="progress-bar-back">
+                    <div class="progress-bar-front" style="width: 54%;"></div>
+                </div>
             </div>
-          </div>
-          <div class="skill">
-            <h3>Unity</h3>
-            <div class="progress-bar-back">
-              <div class="progress-bar-front" style="width: 54%;"></div>
+            <div class="skill">
+                <h3>Blender</h3>
+                <div class="progress-bar-back">
+                    <div class="progress-bar-front" style="width: 70%;"></div>
+                </div>
             </div>
-          </div>
-          <div class="skill">
-            <h3>Blender</h3>
-            <div class="progress-bar-back">
-              <div class="progress-bar-front" style="width: 70%;"></div>
+            <div class="skill">
+                <h3>Html/CSS</h3>
+                <div class="progress-bar-back">
+                    <div class="progress-bar-front" style="width: 60%;"></div>
+                </div>
             </div>
-          </div>
-          <div class="skill">
-            <h3>C++</h3>
-            <div class="progress-bar-back">
-              <div class="progress-bar-front" style="width: 30%;"></div>
+            <div class="skill">
+                <h3>C++</h3>
+                <div class="progress-bar-back">
+                    <div class="progress-bar-front" style="width: 30%;"></div>
+                </div>
             </div>
-          </div>
-          <div class="skill">
-            <h3>Oracle Cloud</h3>
-            <div class="progress-bar-back">
-              <div class="progress-bar-front" style="width: 50%;"></div>
+            <div class="skill">
+                <h3>Node.js</h3>
+                <div class="progress-bar-back">
+                    <div class="progress-bar-front" style="width: 65%;"></div>
+                </div>
             </div>
-          </div>
+            <div class="skill">
+                <h3>Oracle Cloud</h3>
+                <div class="progress-bar-back">
+                    <div class="progress-bar-front" style="width: 50%;"></div>
+                </div>
+            </div>
         </div>
-      </section>
+    </section>    
       <section id="social-media">
         <h2>Social Media</h2>
         <div class="social-media-cards">
